multi-release jars are being generated and work! application starts and works